Add contract management

--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
     <?!= include('views/partials/navbar'); ?>
     <main class="ts-container">
       <?!= include('views/partials/dashboard'); ?>
+      <?!= include('views/partials/contracts'); ?>
       <?!= include('views/partials/settings'); ?>
     </main>
     <?!= include('views/partials/scripts'); ?>
